# competitive-programming-library

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  biicode.conf  index.html  params.json  ç
Utilities/Strings/: sufixtree.h
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  contest_template.cpp  simple.cpp  suffix_array_search.cpp  tricks.cpp
include/cpl/: module.modulemap
include/cpl/bits/: gray_code.hpp
include/cpl/combinatorics/: binomial_coefficient.hpp  catalan_numbers.hpp  nth_permutation.hpp
include/cpl/data_structure/: disjoint_set.hpp  eqsm_segtree.hpp  fenwick_tree.hpp  lazyprop_segtree.hpp  segment_tree.hpp
include/cpl/geometry/: convex_hull.hpp  intersections.hpp  point_2d.hpp  point_in_polygon.hpp  point_order.hpp  point_rotation.hpp  rotations.hpp  segment_intersection.hpp  shoelace.hpp  vector_2d.hpp
include/cpl/graph/: bellman_ford_shortest_paths.hpp  biconnected_components.hpp  bipartite.hpp  bridges.hpp  connected_components.hpp  dag_shortest_paths.hpp  dijkstra_shortest_paths.hpp  directed_graph.hpp  edmonds_karp_max_flow.hpp  floyd_warshall_shortest.hpp  gusfield_all_pairs_min_cut.hpp  hopcroft_karp_maximum_matching.hpp  jump_pointer_tree.hpp  kruskal_minimum_spanning_tree.hpp  lowest_common_ancestor.hpp  min_st_cut.hpp  strong_components.hpp  topological_sort.hpp  undirected_graph.hpp
include/cpl/math/: bisection.hpp  matrix_ops.hpp  rational.hpp  simplex.hpp  ternary_search.hpp
include/cpl/number_theory/: basics.hpp  chinese_remainder_theorem.hpp  divisor.hpp  eratosthenes.hpp  euclid.hpp  euler_phi.hpp  extended_euclid.hpp  miller_rabin.hpp  modular.hpp  pollard_rho_factorization.hpp  prime_factors.hpp  shanks_factorization.hpp  square_root.hpp  trial_division.hpp
include/cpl/search/: binary_search.hpp  brent_find_cycle.hpp  longest_increasing_subsequence.hpp
include/cpl/sorting/: counting_sort.hpp
include/cpl/strings/: basics.hpp  dc3_suffix_array.hpp  edit_distance.hpp  knuth_morris_pratt.hpp  lcp_array.hpp  suffix_array.hpp  z_algorithm.hpp
include/cpl/utility/: basics.hpp  matrix.hpp
include/djp/: module.modulemap
include/djp/bits/: gray_code.hpp
include/djp/combinatorics/: basics.hpp  binomial_coefficient.hpp  catalan_numbers.hpp  nth_permutation.hpp
include/djp/container/: segment_tree.hpp
include/djp/data_structure/: disjoint_set.hpp  eqsm_segtree.hpp  fenwick_tree.hpp  lazyprop_segtree.hpp  (+1 more)
test/: CMakeLists.txt
test/bits/: CMakeLists.txt  gray_code_test.cpp
test/combinatorics/: CMakeLists.txt  basics.cpp  basics_test.cpp  binomial_coefficient_test.cpp  catalan_numbers_test.cpp  nth_permutation_test.cpp
test/data_structure/: CMakeLists.txt  disjoint_set_test.cpp  eqsm_segtree_test.cpp  fenwick_tree_test.cpp  lazyprop_segtree_test.cpp  segment_tree_test.cpp
test/dynamic_programming/: longest_increasing_subsequence.cpp  longest_increasing_subsequence_test.cpp
test/geometry/: CMakeLists.txt  convex_hull.cpp  convex_hull_test.cpp  intersections_test.cpp  point_2d_test.cpp  point_in_polygon_test.cpp  point_order_test.cpp  point_rotation_test.cpp  rotations_test.cpp  segment_intersection_test.cpp  shoelace_test.cpp  sort_points_test.cpp  vector_2d_test.cpp  winding_number.cpp
test/graph/: CMakeLists.txt  adjacency_graph_test.cpp  adjacency_list_test.cpp  bellman_ford_shortest_paths_test.cpp  biconnected_components_test.cpp  bipartite_test.cpp  bridges_test.cpp  connected_components_test.cpp  dag_shortest_paths_test.cpp  dijkstra_shortest_paths_test.cpp  directed_graph_test.cpp  edmonds_karp_max_flow_test.cpp  edmons_karp_max_flow_test.cpp  flow_network_test.cpp  floyd_warshall_shortest_test.cpp  gusfield_all_pairs_min_cut_test.cpp  hopcroft_karp_max_matching_test.cpp  hopcroft_karp_maximum_matching_test.cpp  jump_pointer_tree_test.cpp  kruskal_minimum_spanning_tree_test.cpp  lowest_common_ancestor_test.cpp  min_st_cut_test.cpp  strong_components_test.cpp  topological_sort_test.cpp  undirected_graph_test.cpp
test/math/: CMakeLists.txt  bisection_test.cpp  common_factor_test.cpp  efloat_test.cpp  matrix_ops_test.cpp  modular_test.cpp  rational_test.cpp  simplex_test.cpp  ternary_search_test.cpp
test/miscellaneous/: CMakeLists.txt  longest_increasing_subsequence_test.cpp
test/number_theory/: CMakeLists.txt  basics_test.cpp  chinese_remainder_theorem_test.cpp  common_factor_test.cpp  diophantine_test.cpp  divisor_test.cpp  eratosthenes_test.cpp  euclid_test.cpp  euler_phi_test.cpp  extended_euclid_test.cpp  miller_rabin_test.cpp  modular_test.cpp  pollard_rho_factorization_test.cpp  prime_factors_test.cpp  primes_test.cpp  shanks_factorization_test.cpp  square_root_test.cpp  trial_division_test.cpp
test/numerical/: CMakeLists.txt  simplex_test.cpp
test/search/: CMakeLists.txt  binary_search_test.cpp  brent_find_cycle_test.cpp  knuth_morris_pratt.cpp  knuth_morris_pratt_test.cpp  longest_increasing_subsequence_test.cpp
test/sorting/: CMakeLists.txt  counting_sort_test.cpp
test/src/: main.cpp
test/src/container/: segment_tree_test.cpp
test/src/data_structure/: fenwick_tree_test.cpp  segment_tree_test.cpp
test/src/dynamic_programming/: longest_increasing_subsequence.cpp
test/src/graph/: adjacency_list_test.cpp  dijkstra_shortest_paths_test.cpp
test/src/math/: common_factor_test.cpp  efloat_test.cpp  modular_test.cpp
test/src/string/: basics_test.cpp  edit_distance_test.cpp
test/src/utility/: matrix_test.cpp
test/string/: basics_test.cpp  edit_distance_test.cpp  suffix_array_test.cpp
test/strings/: CMakeLists.txt  basics_test.cpp  dc3_suffix_array_test.cpp  edit_distance_test.cpp  knuth_morris_pratt_test.cpp  lcp_array_test.cpp  suffix_array_test.cpp  z_algorithm_test.cpp  z_function_test.cpp
test/utility/: CMakeLists.txt  basics_test.cpp  iterator_range_test.cpp  matrix_test.cpp
utils/: CMakeLists.txt
utils/gtest-1.7.0/: CMakeLists.txt
utils/gtest-1.7.0/include/gtest/: gtest.h  module.modulemap
utils/gtest-1.7.0/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-port.h  gtest-string.h
(+83 files in other folders)
