
function(add_unittest test_name)
  set(target_name "${test_name}_test")	
  add_executable(${target_name} ${ARGN})
  target_link_libraries(${target_name} CP_utils gtest_main gtest)
  add_test(NAME ${test_name} COMMAND ${target_name})
endfunction()

add_subdirectory(combinatorics)
add_subdirectory(data_structure)
add_subdirectory(geometry)
add_subdirectory(graph)
add_subdirectory(math)
add_subdirectory(miscellaneous)
add_subdirectory(number_theory)
add_subdirectory(search)
add_subdirectory(sorting)
add_subdirectory(strings)
add_subdirectory(utility)
